css/main.css
/***** GENERAL *****/

* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  font: 1em/1.5 'Lato', sans-serif;
  font-weight: 300;
  color: #0E122E;
  margin: 0;
  padding: 0;
}

.headline {
  margin: 0;
  padding: 0;
}

p {
  text-align: justify;
  max-width: 480px;
}

ul {
  padding: 0;
  margin: 0;
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  color: #FEFEFE;
}

img {
  max-width: 100%;
}

/***** TEXT *****/

.headline,
.nav-item,
.btn {
  font-family: 'Montserrat', sans-serif;
  text-transform: uppercase;
}

.headline,
.btn {
  font-weight: 500;
}

.nav-item a {
  font-weight: 400;
}

.title {
  font-size: 2.25rem;
  font-weight: 600;
  text-transform: none;
}

.section-title {
  font-size: 1.5rem;
  padding: 1.875em 0 0;
}

.card-title {
  font-size: 1rem;
  padding: 1em 0;
}

.intro p {
  padding: 0 2em 1em;
  text-shadow: 0 2px 10px #1e1e1e;
}

.content p {
  padding: 0 1.5em;
}

.card p {
  margin: 0;
  padding: 0 4em 2em;
}

#join p {
  padding-bottom: 1em;
}

/***** CONTAINERS *****/

.flex-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.card {
  max-width: 480px;
  padding: 2em 0;
}

/***** HEADER *****/

.main-header {
  background: url('../img/hero-img-alt.svg') no-repeat bottom,
              linear-gradient(#56CEE2 -0.13%, #52AED2 19.79%, #4C8EC3 39.72%, #436FB3 59.65%, #3651A4 79.58%, #253494 99.51%);
  background-size: contain;
  height: 100%;
  color: #FEFEFE;
}

.intro {
  margin: auto; /* pushes nav away from intro section */
}

/***** NAV *****/

.nav {
  display: flex;
  padding: 1em .5em;
  width: 100%;
}

.site-name {
  width: 18em;
  margin-right: auto;
}

/***** HAM MENU *****/

.main-nav li {
  font-size: 1.25em;
  margin: .5em 0;
}

.main-nav {
  display: none; /* Hide nav on mobile until user clicks menu */
  background: #253494;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  padding-top: 50vh; /* Center links vertically and horizontally */
  z-index: 900;
}

.menu-btn,
.exit-btn {
  font-size: 2rem;
  color: #FEFEFE;
  border: none;
  background: none;
  z-index: 1000;
}

.exit-btn {
  display: none; /* Hide exit button */
  font-size: 3em;
}

/***** BUTTONS *****/

.btn {
  display: inline-block;
  border-radius: 50px;
  box-shadow: 0 10px 20px rgba(0, 0, 0, .15);
}

.report-btn {
  background: none;
  border: 2px solid #FEFEFE;
  box-shadow: none;
  padding: .5em 2em;
}

.report-btn:hover {
  background: #FEFEFE;
  color: #253494;
}

.cta-btn {
  background: #CE4DB4;
  padding: 1.25em 2em;
}

.cta-btn:hover {
  background: #B5459F;
}

.card-btn {
  width: 70%;
  padding: 1em 0;
}

.one {
  background: #2C7FB8;
}

.one:hover {
  background: #266E9E;
}

.two {
  background: #41B6C4;
}

.two:hover {
  background: #389FAB;
}

.three {
  background: #56CEE2;
}

.three:hover {
  background: #4DB7C9;
}

.join-btn {
  background: #253494;
  padding: 1.25em 4.5em;
}

/***** REPORT *****/

#report,
#inspiration {
  background: #F7F8FB;
}

/***** STAY INSPIRED *****/

#inspiration img {
  width: 90%;
  padding: 1em 0;
}

/***** JOIN US *****/

.social-links {
  padding: 1em 0;
}

.social-links img {
  width: 45px;
}

/***** MEDIA QUERIES *****/

@media (min-width: 768px) and (max-width: 1099px) {

  #start .card {
    max-width: 700px;
  }

  #start .card {
    flex-direction: row;  /* Cards displayed as row */
    justify-content: space-around;
  }
}

@media (min-width: 768px) {

  .menu-btn,
  .exit-btn {
    display: none; /* Remove hamburger menu */
  }

  .title {
  font-size: 3rem;
  }

  .section-title {
    font-size: 2.25rem;
  }

  .card-title {
    font-size: 1.25rem;
  }
}

@media (min-width: 1000px) {
  #start .cards {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: flex-start;
  }
}

